# FFmpeg

./: CMakeLists.txt
cmake/Hunter/: config.cmake
cmake/template/: Config.cmake.in
